app/assets/stylesheets/custom.css.scss
@import "bootstrap";
@import "bootstrap-sprockets";
@import "font-awesome-sprockets";
@import "font-awesome";

.collection-button a {
	height: 10px;
}

.affix + .container {
    padding-top: 85px
}

.modal-backdrop.in {
    opacity: 0.8;
}

.center {
	text-align: center;
}

#collections-btn {
	margin-top: 10px;
}

#create-collection-btn a {
	color: #333;
	&:hover {
		i { 
			color: green;
		}
	}
}


.pitch-box {
	background: LightYellow;
	padding: 10px 10px 10px 15px;
	h3 {margin-top: 10px;}
	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
	top: 0px;
	z-index: 1020;
}
.pitch-box.affix {
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 10;
}

#journal {
	// font-family: 'Bilbo Swash Caps', cursive;
	font-family: 'Pacifico', cursive;
}

body {
	background: #e9e9e9;
	color: #444;
}

.day {
	text-align: center;
	// background: white;
	padding: 15px 0px 15px 0px;
	text-transform: uppercase;
	font-size: 20px;
	font-weight: 600;
	margin-top: 20px;
	// box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
}

.tags {
	margin-top: 82px;
	background: white;
	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
	h5 {
		text-align: center;
	}
	padding-bottom: 10px;

}

.feed_group {
	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
}

.tag {
	background: #e9e9e9;
	border: 1px solid gray;
	padding: 5px;
	border-radius: 10px;
	// line-height: 30px;
	// float: left;
	margin-bottom: 5px;
	margin-right: 5px;
	margin-bottom: 5px;
	font-size: .8em;
	&:hover {
		background: #d3d3d3;
	}
}

.tags .tag {
	float: left;
}

.category li {
	float: left;
	margin-right: 5px;
}

#item_category {
	// min-height: 50px;
	margin-top: 10px;
}

.item {
	background: white;
	// margin: 10px 0px 0px 0px;
	// height: 100px;
	padding: 10px;
	padding-top: 20px;
	padding-bottom: 20px;
	border-bottom: 1px solid #e4d9d9;
	margin-bottom: 0px;
	&:hover {
		background: #f5f5f5;
		.btn-frontier {
			visibility: visible;
		}
	}
}

.item-group {
	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
}

#item_authors {
	color: #bbbbbb;
}

.item-title h4 {
	margin: 0px;
	font-size: 1.3em;
	font-weight: normal;
	line-height: 25px;
}



.modal-title {
	text-transform: none !important; 
	margin-top: 0px;
}

.modal-content {
	background: #e9e9e9;
}

.collection {
	margin-bottom: 20px;
	margin-top: 20px;
}

.alert-success {
		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);

}

.truncate {
	// white-space: nowrap; 
    // width: 12em; 
    // overflow: hidden;
    // text-overflow: ellipsis; 
    // border: 1px solid #000000;
}

.dropdown-option {
	color: #333;
	line-height: 15px;
	padding: 3px;
	border-bottom: 1px solid #f5f5f5;
	&:hover {
		background: #f5f5f5;
		text-decoration: none;
		color: #333;
	}
}

a:hover {
	text-decoration: none;
}

.dropdown-menu {
	padding-top: 0px;
	padding-bottom: 0px;
}

.btn-frontier {
	background: -webkit-linear-gradient(#e3262e, #ab171e);
	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.22);
	border: 1px solid #920c12;
	color: white;
	visibility: hidden;
	// font-weight: bold;
	&:hover {
		color: white;
		background: linear-gradient(#e63d44, #c11a22);
	}
	border-radius: 0px;
}

.btn-frontier-visible {
	background: -webkit-linear-gradient(#e3262e, #ab171e);
	box-shadow: 0 1px 2px 0 rgba(0,0,0,0.22);
	border: 1px solid #920c12;
	color: white;
	// font-weight: bold;
	&:hover {
		color: white;
		background: linear-gradient(#e63d44, #c11a22);
	}
	border-radius: 0px;
}


.static a {visibility: visible;}

.fa-heart {
	color: red;
}














#newItemListModal {
	// background: white;
}

.new_item_list {
	background: #e9e9e9;
	padding: 0px !important;
	padding-bottom: 20px;
	border-radius: 6px;
}

.modal-dialog {
	width: 80%;
}

.list-choices {
	margin: 0 auto;
	padding-bottom: 20px;
}

header {
	z-index: 2;
}

.main {
	z-index: 1;
}

.list-small {
	width: 80%;
	text-align: center;
	margin: 0 auto;
}
.added-item {
	background: #e9e9e9;
}

.confirm {
	text-align: center;
}

#slogan {
	font-size: 14px;
	font-style: italic;
}

.footer {
	border-top: 1px solid #e4e2e2;
	padding: 10px;
}

.journal {
	color: #bbb;
	font-style: italic;
}

.nothing-here {
	// width: 600px;
	text-align: center;
	margin-left: 120px;
	margin-right: 120px;
	color: gray;
	h4 {

	}
}

.post-list {
	height: 150px;
	width: 750px;
	background: white;
	padding: 10px;
	margin: 0 auto;
	background-size: cover;
	// background-repeat: no-repeat;
	// background-size: 100% 100%;
	background-position: center;
	min-height: 150px;
	position: relative;
	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
	text-align: center;
	// background: #534540;

}

.list-small {
	background: white;
	padding: 10px;
	box-shadow: 0 1px 3px 0 rgba(0,0,0,0.33);
}


.pagination {
	margin: 0px;
}

header {
	// box-shadow: 0 1px 2px 0 rgba(0,0,0,0.22);
	// z-index: 10000;
}

.form-control {
	max-width: 300px;
}


// #tag-dropdown-menu {
// 	li a {
// 		text-transform: none !important;
// 	}
// }

.profile-img img {
	height: 80px;
	border-radius: 100%;
	border: 2px solid white;
}

.follow-count-list {
	float:left;
}
a {
	text-decoration: none;
}

.submitter {
	float: left;
	max-width: 200px;
	img {
		display: block;
		margin: auto;
		margin-bottom: 10px;
		height: 60px;
		width: 60px;
	}
}

#myModal {
	.modal-body {
		display: block;
		margin: auto;
		text-align: center;
		button {
			width: 200px;
		}
		a {
			color: white;
		}
	}
	.modal-title {
		// color: black;
	}
}



#newFindingModal {
	color: black;
	#instructions li {
		list-style: disc;
		margin-left: 30px;
	}
	input, textarea {
		width: 400px;
		padding-left: 8px;
		padding-right: 5px;
	}
	textarea {
		height: 200px;
		padding-top: 5px;
	}
}

.close-item-modal {
	position: relative;
	display: inline-block;
	// width: 10px;
	// height: 50px;
	left: -37px;
	background: #337ab7;
	color: white;
	padding: 6px;
	opacity: 1;
	border: 1px solid LightGray;
	border-top: none;
	i {
		color: white;
		font-size: 1.1em;
	}
	&:hover {
		opacity: 1;
	}
}
/* ... */

